@@ -17,3 +17,4 @@ Changes in current version:
  o Add Doxygen documentation to header files; from Mark Heily
  o Add a evdns_set_transaction_id_fn() function to override the default
    transaction ID generation code.
+ o Add an evutil module (with header evutil.h) to implement our standard cross-platform hacks, on the theory that somebody else would like to use them too.
